@@ -75,8 +75,12 @@ Build
 
 C API
 
+- New function PyDict_MergeFromSeq2() exposes the builtin dict
+  constructor's logic for updating a dictionary from an iterable object
+  producing key-value pairs.
+
 - PyArg_ParseTupleAndKeywords() requires that the number of entries in
-  the keyword list equals the number of argument specifiers.  This
+  the keyword list equal the number of argument specifiers.  This
   wasn't checked correctly, and PyArg_ParseTupleAndKeywords could even
   dump core in some bad cases.  This has been repaired.  As a result,
   PyArg_ParseTupleAndKeywords may raise RuntimeError in bad cases that
